# transmitter-position-optimization

./: 21_exp_times.npz  21_gau_plus.npz  21_gau_times.npz  21_mat3_times.npz  21_mat5_plus.npz  21_mat5_times.npz  21_rqp_plus.npz  21_rqp_times.npz  2_exp_plus.npz  2_exp_times.npz  2_gau_times.npz  2_mat3_plus.npz  2_mat3_times.npz  2_mat5_times.npz  2_rqp_times.npz  README.md  a_distance.npz  a_random.npz  b_random.npz  d_random_gbps.npz  exp.npz  exp_1.npz  exp_ei.npz  exp_old.npz  exp_pi.npz  exp_poly.npz  exp_poly_1.npz  exp_poly_ei.npz  exp_poly_pi.npz  gau.npz  gau_1.npz  gau_ei.npz  gau_old.npz  gau_pi.npz  gau_poly.npz  gau_poly_1.npz  gau_poly_ei.npz  gau_poly_pi.npz  mat3.npz  mat3_1.npz  (+27 more)
transmitter_position_optimization/: constant.py  graph.py  log.py  main.py  print.py  sample.py  save.py  simulation.py  simulations.py
transmitter_position_optimization/bayesian_optimization/: acquisition.py  bayesian_optimization.py  gaussian_process_regression.py
transmitter_position_optimization/bayesian_optimization/kernel/: exponential_kernel.py  gaussian_kernel.py  gaussian_plus_kernel.py  kernel.py  matern3_kernel.py  matern5_kernel.py  polynomial_kernel.py  (+1 more)
transmitter_position_optimization/conventional_method/: distance_estimation.py  random_search.py
transmitter_position_optimization/environment/: coordinate.py  data_rate.py  distance.py  evaluation.py  propagation.py  receivers.py  transmitter.py
transmitter_position_optimization/optimization/: random_search_optimization.py
transmitter_position_optimization/simulation/: double.py  single.py  triple.py
(+10 files in other folders)
